force-app/main/default/objects/Flagship_Station_Mapping__mdt/Flagship_Station_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Flagship Station Mapping</label>
    <pluralLabel>Flagship Station Mappings</pluralLabel>
</CustomObject>