force-app/main/default/objects/Flagship_Station_Mapping__mdt/fields/FNA_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>FNA_Product_Group__c</fullName>
    <label>FNA Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Use</fullName>
                <default>true</default>
                <label>For Use</label>
            </value>
            <value>
                <fullName>For Save</fullName>
            </value>
            <value>
                <fullName>For Invest</fullName>
            </value>
            <value>
                <fullName>For Borrow</fullName>
            </value>
            <value>
                <fullName>For Protect</fullName>
            </value>
            <value>
                <fullName>SME Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>