force-app/main/default/objects/Flagship_Station_Mapping__mdt/fields/Station_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Station_Name_EN__c</fullName>
    <label>Station Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>