force-app/main/default/objects/Flagship_Station_Mapping__mdt/listViews/All_Views.listView-meta.xml
<ListView>
    <fullName>All_Views</fullName>
    <columns>MasterLabel</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>FNA_Product_Group__c</columns>
    <columns>Station_Name_EN__c</columns>
    <columns>Station_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Views</label>
    <language>en_US</language>
</ListView>